# CashChange

./: .gitignore  Makefile  docker-compose.yml  pyproject.toml
api/common/: permissions.py  spectacular_schema.py  types.py  views.py
api/v1/: urls.py
api/v1/telegram/: urls.py
api/v1/telegram/serializers/: __init__.py  telegram_user.py
api/v1/telegram/views/: telegram_user.py
api/v1/users/: urls.py
api/v1/users/serializers/: __init__.py  user_verification.py
api/v1/users/views/: __init__.py  user_crud.py  user_verification.py
apps/common/models/: choices.py  managers.py  models.py
apps/telegram/migrations/: 0002_telegramuser_tu_telegram_username_contains_at.py
apps/telegram/models/: telegram_user.py
apps/users/: admin.py  models.py
apps/users/migrations/: 0001_initial.py  0002_verificationcodetelegram_user_telegram_user_and_more.py
apps/users/models/: user.py  verification_code_telegram.py
apps/users/services/user_verification/: __init__.py  verification.py  verification_code.py
backend/: .env-example  manage.py  pyproject.toml
backend/api/: urls.py
backend/api/centrifugo/: urls.py
backend/api/centrifugo/views/: __init__.py  chat.py  message_counter.py  token.py  user.py
backend/api/common/: permissions.py  serializers.py  validatiors.py  views.py
backend/api/v1/: urls.py
backend/api/v1/centrifugo/: urls.py
backend/api/v1/chat/: urls.py
backend/api/v1/feedback/: urls.py
backend/api/v1/offers/: urls.py
backend/api/v1/telegram/: permissions.py  urls.py
backend/api/v1/users/: urls.py
backend/apps/centrifugo/: apps.py
backend/apps/chat/: apps.py  tasks.py
backend/apps/chat/migrations/: 0001_initial.py  0002_alter_attachment_content_type.py
backend/apps/chat/models/: __init__.py  attachment.py  chat.py  chat_member.py  message.py
backend/apps/chat/services/: __init__.py
backend/apps/chat/signals/: __init__.py  callbacks.py  signals.py
backend/apps/common/metaclasses/: singleton.py
backend/apps/common/mixins/: __init__.py  from_dict.py
backend/apps/common/models/: choices.py  managers.py  models.py
backend/apps/common/services/: unset.py
backend/apps/feedback/: admin.py  apps.py
backend/apps/feedback/migrations/: 0001_initial.py
backend/apps/feedback/models/: feedback.py
backend/apps/geo/: apps.py
backend/apps/geo/migrations/: 0001_initial.py
backend/apps/geo/models/: __init__.py  city.py
backend/apps/offers/: admin.py  apps.py
backend/apps/offers/migrations/: 0001_initial.py
backend/apps/telegram/: apps.py
backend/project_selectors/chat/: chat.py  dto.py  message.py
backend/repository/: base_repo.py
backend/repository/utils/: base_django.py
backend/src/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/tests/: conftest.py
backend/tests/common/: drf_api_client.py
cicd/: .env-example  .telegram-env-example
cicd/centrifugo/: .env-example  config.json
cicd/docker/backend/: Dockerfile
cicd/docker/telegram/: Dockerfile
cicd/nginx/: nginx.conf
repository/: base_repo.py
repository/applications/telegram/: telegram_user.py
repository/applications/user/: user.py  verification_code_telegram.py
src/: settings.py  urls.py
telegram/: .env-example  bot.py  config.py  pyproject.toml
telegram/endpoints/: exceptions.py
telegram/endpoints/dto/: __init__.py  base.py  create_user.py  get_user.py  is_verified.py  verify_code.py
telegram/endpoints/endpoints/: __init__.py  base.py  create_user.py  get_user.py  verify_code.py
telegram/handlers/: __init__.py  about.py  base.py  start.py  verify.py
telegram/handlers/keyboards/reply/: base.py  main.py  start.py
telegram/services/: dto.py
telegram/services/telegram_user/: create.py  is_verified.py  verify_code.py
telegram/utils/: logger.py
telegram/utils/client/: __init__.py  base.py
telegram/utils/endpoints/: base.py
telegram/utils/endpoints/dto/: __init__.py  base.py  create_user.py  is_verified.py  verify_code.py
telegram/utils/endpoints/endpoints/: base.py  create_user.py  is_verified.py  verify_code.py
tests/: conftest.py
tests/common/: __init__.py  drf_api_client.py
tests/test_api/test_v1/: conftest.py  test_user_crud.py
(+90 files in other folders)
